--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       flex-direction: column
     }
 
+    img{
+      width: 100%;
+    }
     canvas {
       position: absolute;
       top: 0;
